--- a/css/modules/header_logo.css
+++ b/css/modules/header_logo.css
@@ -1,4 +1,4 @@
-.header_logo { margin:1em auto; text-align:center; }
+.header_logo { margin:1em auto 0; text-align:center; }
 .header_logo h3 { font-family:'Hoefler Text', Georgia, serif; font-size:10em; line-height:.8em; color:black; background:transparent url(../../images/line.gif) repeat-x scroll 100px 0; }
 .header_logo h3 .kern_i img { left:4px; }
 .header_logo h3 .kern_n { letter-spacing:-.06em; }
@@ -6,4 +6,4 @@
 .header_logo h3 .kern_k { }
 .header_logo img { position:relative; top:12px; z-index:-1; margin:0; }
 .header_logo strong { color:#0000aa; }
-.header_logo cite { font-size:1.2em; }
+.header_logo cite { font-size:1.2em; line-height:2.4em; }
