--- a/css/modules/leader.css
+++ b/css/modules/leader.css
@@ -1,7 +1,6 @@
 .leader h1, 
-.leader h2 { font-size:3em; line-height:1.3em; margin-top:.5em; padding-top:0; }
-.leader.continued { -moz-column-count:2; -webkit-column-count:2; -moz-column-gap:0; -webkit-column-gap:0; margin-top:1em; }
-.leader.continued h1 { font-size:1.4em; line-height:1.1em; padding-top:.24em; }
+.leader h2 { font-size:2.8em; line-height:1.12em; margin-top:.5em; padding-top:0; }
+.leader.continued { -moz-column-count:2; -webkit-column-count:2; }
 .leader.continued .read,
 .leader.continued .read a { color:#bbb; }
 .leader cite { line-height:2.2em; }
