--- a/css/modules/table.css
+++ b/css/modules/table.css
@@ -3,6 +3,7 @@
 .table td { border:solid #ededed 1px; }
 .six_columns .table td { width:190px; }
 .nine_columns .table td { width:290px; }
+.table th { min-width:2em; }
 .table th,
 .table td { padding:.5em; }
 .table dt { float:left; }
