--- a/css/modules/header_logo.css
+++ b/css/modules/header_logo.css
@@ -6,4 +6,4 @@
 .header_logo h3 .kern_k { }
 .header_logo img { position:relative; top:12px; z-index:-1; margin:0; }
 .header_logo strong { color:#0000aa; }
-.header_logo cite { font-size:1.2em; line-height:2.4em; }
+.header_logo cite { font-size:1.2em; line-height:2.4em; margin-left:2.75em; }
