--- a/css/modules/header_divider.css
+++ b/css/modules/header_divider.css
@@ -1,1 +1,1 @@
-.header_divider { height:1px; border:solid #aaa; border-width:1px 0; margin:0 0 1em 5px; }
+.header_divider { height:1px; border:solid #aaa; border-width:1px 0; margin:0 0 1em; }
