--- a/css/modules/header_logo.css
+++ b/css/modules/header_logo.css
@@ -1,9 +1,9 @@
-.header_logo { margin:1em auto 0; text-align:center; }
-.header_logo h3 { font-family:'Hoefler Text', Georgia, serif; font-size:10em; line-height:.8em; color:black; }
-.header_logo h3 .kern_i img { left:4px; }
+.header_logo { margin:0 auto; text-align:center; }
+.header_logo h3 { font-family:'Hoefler Text', Georgia, serif; font-size:10em; line-height:.6em; color:black; }
+.header_logo h3 .kern_i img { left:5px; }
 .header_logo h3 .kern_n { letter-spacing:-.06em; }
 .header_logo h3 .kern_c { letter-spacing:-.05em; }
 .header_logo h3 .kern_k { }
-.header_logo img { position:relative; top:12px; z-index:-1; margin:0; }
+.header_logo img { position:relative; top:11px; z-index:-1; margin:0; }
 .header_logo strong { color:#0000aa; }
-.header_logo cite { font-size:1.2em; line-height:2.4em; margin-left:2.75em; }
+.header_logo cite { font-size:1.2em; display:block; margin:.7em 0 1.6em; }
