Lots of stuff: - Reset type in units of the line-height of body copy, allowing type columns to align vertically. - Adjusted type to maintain aesthetics with new treatment, i.e. tightened tracking and made attendant changes - WebKit's rendering of soft-hyphens changes line-heights. Deactivated hyphenator for now. - Added URL flag to activate hyphenator for to gather opinions. - Renamed some modules and other CSS based on newspaper terminology. - Removed filler articles from 'pages'. - Made Letters interface permanent and primary on 'pages'. - Restructured display logic per previous changes and to clean up. - Cleaned up grid-level 'rule' implementation. Was changing grid dimensions and was a mess. - Tweaked spacing in header and footer. - Restyled stamp submit button and implemented @font-face 'I'. - Made 'I' in Inck nameplate real letter with @font-face. - Added RSS chicklet to 'flag'. - Validated XHTML.

--- a/css/modules/header_divider.css
+++ b/css/modules/header_divider.css
@@ -1,1 +1,1 @@
-.header_divider { height:1px; border:solid #aaa; border-width:1px 0; margin:0 0 1em; }
+.header_divider { height:1px; border:solid #aaa; border-width:1px 0; margin:0; }
