--- a/css/global/typography.css
+++ b/css/global/typography.css
@@ -1,3 +1,4 @@
+@font-face { font-family: Prince Valiant; src: url('../../img/PrinceValiant.ttf'); } 
 body { font-family:'Hoefler Text', Georgia, serif; font-size:62.5%; color:#666; }
 a { text-decoration:none; }
 h1:hover a,
