--- a/css/modules/dog_ear.css
+++ b/css/modules/dog_ear.css
@@ -1,16 +1,16 @@
-.page_turner { position:relative; }
-.page_turner h3 { font-size:1.5em; text-align:right; width:4.35em; padding:10px 5px; z-index:1; }
-.page_turner h3,
-.page_turner .page_fold,
-.page_turner .page_corner { position:absolute; right:0; }
-.page_turner .page_corner {
+.dog_ear { position:relative; }
+.dog_ear h3 { font-size:1.5em; text-align:right; width:4.35em; padding:10px 5px; z-index:1; }
+.dog_ear h3,
+.dog_ear .page_fold,
+.dog_ear .page_corner { position:absolute; right:0; }
+.dog_ear .page_corner {
 	background-color:white;
 	width:120px; height:120px;
 	-webkit-box-shadow:rgba(0,0,0,0.5) -5px 5px 7px; -moz-box-shadow:rgba(0,0,0,0.5) -5px 5px 7px;
 	overflow:hidden;
 }
 
-.page_turner .page_fold {
+.dog_ear .page_fold {
 	right:-25px; top:60px;
 	width:169px; height:0;
 	border:solid #eee; border-width:5px 0 0;
@@ -19,5 +19,5 @@
 }
 
 @-moz-document url-prefix() {
-	.page_turner .page_fold { right:-26px; top:56px; border-width:4px 0 0; }
+	.dog_ear .page_fold { right:-26px; top:56px; border-width:4px 0 0; }
 }
