--- a/css/modules/leader.css
+++ b/css/modules/leader.css
@@ -1,10 +1,10 @@
 .leader h1, 
-.leader h2 { font-size:2.8em; line-height:1.12em; margin-top:.5em; padding-top:0; }
+.leader h2 { font-size:3.3em; letter-spacing:-1px; line-height:1.3em; margin-top:0.65em; padding-top:0; }
 .leader.read,
 .leader .read,
 .leader .read a { color:#bbb; }
-.leader cite { line-height:2.2em; }
-.leader p { font-size:1.4em; line-height:1.6em; margin-top:1.12em; text-align:justify; }
+.leader cite { line-height:2.1em; }
+.leader p { font-size:1.4em; line-height:1.5em; margin-top:1.5em; text-align:justify; }
 .leader hr { border:0; text-align:center; margin:0; height:0; }
 .leader hr:after { content:"--"; }
 .leader .dateline { font-size:.85em; text-transform:uppercase; }
