Lots of awesome stuff: - Preliminary JS column reflowing logic. Inefficient and duplicated but works. - Article content now lives serverside in first column. - Added jQuery for said. - Moved all JS into separate files. - With content reflowing in JS, added automatic article population into front page. Several components: 	- Created article include containing all logic for displaying articles. 	- Pulled article order from RSS feed. 	- Automatically printed into paragraphs, obviously. 	- Automatically populated read-text values. 	- Created 'a1' non-text pseudo-page to hold new banner hed, photo, and article truncation lengths. 	- Stored dateline in articles. 	- Made form page for adding new articles and modifying a1 info, but didn't yet plug in to actual data store. - Aligned type on single article page. - Added banner headline for top article per JD suggestion. - Currently commented, but added form for eventual text entry of past issues in flag. - Removed extraneous styles for CSS column reflowing on page. - Added tint to table per JD suggestion and renamed 'sidebar'. - Added link to Chrome to footer. - Rewrote default copy for letters to editor.

--- a/css/modules/flag.css
+++ b/css/modules/flag.css
@@ -6,3 +6,4 @@
 .flag h3 .letter_k { }
 .flag img { z-index:-1; margin:0; }
 .flag cite { font-size:1.2em; display:block; margin:.7em 0 1.4em; }
+.flag form, input { display:inline; border-width:0; }
