--- a/css/modules/banner.css
+++ b/css/modules/banner.css
@@ -1,3 +1,2 @@
-.grid .module.banner { display:none; }
-.banner { margin:2.5em 0 0; }
-.banner h1 { font-size:8em; line-height:1em; text-align:center; }
+.banner { margin-bottom:0; }
+.banner h1 { font-size:5.2em; line-height:1em; letter-spacing:-1px; margin-top:0.4em; }
