--- a/css/modules/leader.css
+++ b/css/modules/leader.css
@@ -1,14 +1,12 @@
 .leader h1, 
 .leader h2 { font-size:3.3em; letter-spacing:-1px; line-height:1.3em; margin-top:0.65em; padding-top:0; }
+.leader.first h2 { margin-top:.375em; }
 .leader.read,
 .leader .read,
 .leader .read a { color:#bbb; }
-.leader cite { line-height:2.1em; }
+.leader cite { line-height:1.75em; font-size:1.2em; }
 .leader p { font-size:1.4em; line-height:1.5em; margin-top:1.52em; text-align:justify; }
 .leader hr { border:0; text-align:center; margin:0; height:0; }
 .leader hr:after { content:"--"; }
 .leader .dateline { font-size:.85em; text-transform:uppercase; }
-.leader .dateline:after { content:" - "; }
-.nine_columns .flow.leader { -moz-column-count:3; -webkit-column-count:3; -moz-column-gap:20px; -webkit-column-gap:20px; border-top:1px solid #bbb; margin-top:5px; padding-top:10px; }
-.nine_columns .flow.leader.first { border-top:none; }
-.nine_columns .flow.leader h2 { margin-top:0; }
+.leader .dateline:after { content:" -- "; }
