Intermediate SVN commit for large file reorganization and renaming of framework elements:
- Renaming 'modules' to 'blocks'.
- Renaming 'components' to 'clips'.
- Renaming 'global' CSS to 'inck' CSS.
- Shortening 'utility' and 'library' CSS folders to signify system contents.
- Moving js library into js folder.
- Renaming shitty letter tracking script to 'all_letters.php'.
- Removed legacy rss.php script.
- Moved favicon into img folder.

Also had to adjust 'dog_ear' positioning for some reason, and adjusted spacing on sidebar graphic.

Also includes logic for independent content-management 'file' system.

--- a/css/modules/dog_ear.css
+++ b/css/modules/dog_ear.css
@@ -1,4 +1,4 @@
-.dog_ear { position:relative; }
+.dog_ear { position:absolute; top:0; right:0; }
 .dog_ear h3 { font-size:1.5em; text-align:right; width:4.35em; padding:10px 5px; z-index:1; }
 .dog_ear h3,
 .dog_ear .page_fold,
