--- a/css/blocks/dog_ear.css
+++ b/css/blocks/dog_ear.css
@@ -1,4 +1,4 @@
-.dog_ear { position:absolute; top:0; right:0; }
+.dog_ear { position:relative; top:-4.4em; right:0; }
 .dog_ear h3 { font-size:1.5em; text-align:right; width:4.35em; padding:10px 5px; z-index:1; }
 .dog_ear h3,
 .dog_ear .page_fold,
@@ -6,15 +6,14 @@
 .dog_ear .page_corner {
 	background-color:white;
 	width:120px; height:120px;
-	-webkit-box-shadow:rgba(0,0,0,0.5) -5px 5px 7px; -moz-box-shadow:rgba(0,0,0,0.5) -5px 5px 7px;
-	overflow:hidden;
+	-webkit-box-shadow:-6px 5px 7px rgba(0,0,0,0.5); -moz-box-shadow:-6px 5px 7px rgba(0,0,0,0.5);
 }
 
 .dog_ear .page_fold {
 	right:-25px; top:60px;
 	width:169px; height:0;
 	border:solid #eee; border-width:5px 0 0;
-	-webkit-box-shadow:rgba(0,0,0,0.5) 0 -5px 50px; -moz-box-shadow:rgba(0,0,0,0.5) 0 -5px 20px;
+	-webkit-box-shadow:0 -5px 50px rgba(0,0,0,0.5); -moz-box-shadow:0 -5px 20px rgba(0,0,0,0.5);
 	-webkit-transform:rotate(45deg); -moz-transform:rotate(45deg);
 }
 
