Returning after long hiatus. Added two articles, using the file naming scheme of all being in 'section' b, and a section being only a1. Renamed former a2 accordingly and renamed m3 to b3, also finishing it. Made a new sidebar. Changed 'volume', 'edition', etc. in header for fun. Changed weather. Made other, non-content modifications:
- Adjusted spacing of 'banner' to accommodate two lines..
- Made 'cut' accept other aspect ratios by cropping them with overflow.
- Changed price to $.75 and made real PayPal link.
- Adjusted spacing of 'sidebar'.
- Converted to valid HTML5:
	- Changed header tags.
	- Added article tags.
	- Removed entities.
	- Added note in footer.
	- Removed name attributes.
- Removed leftover development logging from flow.js.
- Made datelines optional.

--- a/css/blocks/cut.css
+++ b/css/blocks/cut.css
@@ -1,11 +1,12 @@
-.cut { margin-top:1.7em; margin-bottom:.4em; }
+.cut { margin-top:2.1em; margin-bottom:1.2em; overflow:hidden; }
 .twelve_columns .cut img { width:1180px; }
 .eleven_columns .cut img { width:1080px; }
 .ten_columns .cut img { width:980px; }
 .nine_columns .cut img { width:880px; }
 .eight_columns .cut img { width:780px; }
 .seven_columns .cut img { width:680px; }
-.six_columns .cut img { width:580px; height:387px; }
+.six_columns .cut img { width:580px; } 
+.six_columns .cut { height:387px; }
 .five_columns .cut img { width:480px; }
 .four_columns .cut img { width:380px; }
 .three_columns .cut img { width:280px; }
