Added support for poems. Created a wrapping rail type and fixed letters layout using it. Fixed paragraph parsing in letters. Added Hoefler Text as font-face. Added gutters to page, outside grid. Cleaned up include code indentation. Updated copyright and browser notices in footer. Added optional left 'dog ear'. Moved spacing for current top item to css height on letters link.

--- a/css/blocks/cut.css
+++ b/css/blocks/cut.css
@@ -5,7 +5,7 @@
 .nine_columns .cut img { width:880px; }
 .eight_columns .cut img { width:780px; }
 .seven_columns .cut img { width:680px; }
-.six_columns .cut img { width:580px; } 
+.six_columns .cut img { width:580px; height:387px; } 
 .six_columns .cut { height:387px; }
 .five_columns .cut img { width:480px; }
 .four_columns .cut img { width:380px; }
