--- a/css/blocks/letter_header.css
+++ b/css/blocks/letter_header.css
@@ -1,3 +1,2 @@
 .letter_header { margin-bottom:0; }
-.letter_header p { float:right; margin-top:1.4em; }
-.letter_header h2 { float:left; }
+.letter_header p { margin-top:1.4em; }
