--- a/css/blocks/leader.css
+++ b/css/blocks/leader.css
@@ -1,6 +1,6 @@
+/* Make .leader min-height not break the JS to add automatic spacing on short pieces. */
 .leader h1, 
 .leader h2 { font-size:3.3em; letter-spacing:-1px; line-height:1.3em; margin-top:0.65em; padding-top:0; }
-.leader.first .letters { margin-top:145px; }
 .leader.first.front { max-height:630px; }
 .leader.read,
 .leader .read,
