--- a/css/blocks/letter.css
+++ b/css/blocks/letter.css
@@ -1,4 +1,7 @@
 .letter { margin-bottom:1em; }
-.letter p { text-align:left; padding-left:.5em; }
+.letter .prompt { color:#bbb; }
+.letter h1, 
+.letter h2 { font-size:3.3em; letter-spacing:-1px; line-height:1.3em; margin-top:0.65em; padding-top:0; }
+.letter p { font-size:1.4em; line-height:1.5em; margin-top:1.52em; text-align:left; padding-left:.5em; }
 .letter em { display:block; font-size:1.4em; margin-top:3em; border:solid #bbb; border-width:1px 0 0 1px; padding:.7em 0 0 .7em; }
 .letter cite { margin-top:0; font-size:1.4em; padding-left:.5em; }
