--- a/css/blocks/leader.css
+++ b/css/blocks/leader.css
@@ -6,7 +6,11 @@
 .leader .read,
 .leader .read a { color:#bbb; }
 .leader cite { line-height:1.75em; font-size:1.2em; }
+.leader ol,
+.leader ul,
 .leader p { font-size:1.4em; line-height:1.5em; margin-top:1.52em; text-align:justify; }
+.leader.legible p { text-align:left; }
+.leader ol li { list-style:decimal inside; margin-left:.5em; text-align:left; }
 .leader hr { border:0; text-align:center; margin:0; height:0; }
 .leader hr:after { content:"--"; }
 .leader .dateline { font-size:.85em; text-transform:uppercase; }
