Added a Self-Referential Article and Smart Quotes Throughout
I also reformatted the base CSS folder as a 'colophon' and linked to it
from the footer, removed drafts from production in preparation for
sharing the platform, toyed with a general illustration system for new
features, linked to the Letters to the Editor in place of one of the
more wistful pieces of header verbiage, and darkened the base text and
background colors to just below W3C standards.

--- a/css/blocks/dog_ear.css
+++ b/css/blocks/dog_ear.css
@@ -1,13 +1,14 @@
 .dog_ear { position:relative; }
-.dog_ear h3 { font-family:'Gill Sans'; font-size:1.5em; line-height:1em; width:4em; padding:.5em 0; z-index:1; }
+.dog_ear section { font-family:'Gill Sans'; font-size:1.5em; line-height:1.1em; width:5.5em; padding:.5em 0; z-index:1; }
+.dog_ear label { cursor:pointer; }
 
 .dog_ear.right { right:0; }
-.dog_ear.right h3 { text-align:right; }
-.dog_ear.right h3,
+.dog_ear.right section { text-align:right; }
+.dog_ear.right section,
 .dog_ear.right .page_fold,
 .dog_ear.right .page_corner { position:absolute; right:0; }
 .dog_ear.right .page_corner {
-	background-color:white;
+ 	background-color:#fffffc;
 	width:120px; height:120px;
 	-webkit-box-shadow:-6px 5px 7px rgba(0,0,0,0.5); -moz-box-shadow:-6px 5px 7px rgba(0,0,0,0.5);
 }
@@ -26,7 +27,7 @@
 .dog_ear.left .page_fold,
 .dog_ear.left .page_corner { position:absolute; left:0; }
 .dog_ear.left .page_corner {
-	background-color:white;
+ 	background-color:#fffffc;
 	width:120px; height:120px;
 	-webkit-box-shadow:6px 5px 7px rgba(0,0,0,0.5); -moz-box-shadow:6px 5px 7px rgba(0,0,0,0.5);
 }
