--- a/css/blocks/postcard_address.css
+++ b/css/blocks/postcard_address.css
@@ -1,2 +1,2 @@
-.postcard_address { padding:3em 0; margin:5em auto; border-left:solid #bbb 1px; color:#bbb; }
+.postcard_address { padding:3em 0; margin:5em auto; border-left:solid #bbb 1px; }
 .postcard_address address { font-family:'Gill Sans', 'Helvetica', sans-serif; font-size:1.4em; line-height:1.4em; width:16em; padding:0 .4em; margin:.6em auto .2em; border-bottom:solid #bbb 1px; }
