--- a/css/inck/typography.css
+++ b/css/inck/typography.css
@@ -1,8 +1,13 @@
-@font-face { font-family: Prince Valiant; src: url('../../img/PrinceValiant.ttf'); } 
-body { font-family:'Hoefler Text', serif; font-size:62.5%; color:#666; }
+@font-face { font-family:Prince Valiant; src:url('../../img/PrinceValiant.ttf'); } 
+
+body { font-family:'Hoefler Text', serif; font-size:62.5%; color:#555; background-color:#fffffc; }
+
 a { text-decoration:none; }
+
 h1:hover a,
 h2:hover a,
 a:hover { text-decoration:underline; cursor:pointer; }
+
 a:visited, a:hover, a:link { color:black; }
+
 em { color:#00a; }
