Reinstated double rule.

--- a/css/modules/rule.css
+++ b/css/modules/rule.css
@@ -1,1 +1,1 @@
-.rule { height:1px; border:solid #aaa; border-width:1px 0 0; margin:0; }
+.rule { height:1px; border:solid #aaa; border-width:1px 0; margin:0; }
