--- a/css/modules/cut.css
+++ b/css/modules/cut.css
@@ -1,4 +1,7 @@
-.cut { margin-top:2.1em; padding-top:0.7em; overflow:hidden; }
+.cut img { margin-bottom:0; margin-top:2em; padding-top:.5em; overflow:hidden; }
+.cut video,
+.cut object,
+.cut embed { margin-bottom:0; margin-top:2em; padding-top:.3em; }
 .twelve_units .cut img { width:1180px; }
 .eleven_units .cut img { width:1080px; }
 .ten_units .cut img { width:980px; }
@@ -6,7 +9,7 @@
 .eight_units .cut img { width:780px; }
 .seven_units .cut img { width:680px; }
 .six_units .cut img { width:580px; height:387px; } 
-.six_units .cut { height:387px; }
+/*.six_units .cut { height:387px; }*/
 .five_units .cut img { width:480px; }
 .four_units .cut img { width:380px; }
 .three_units .cut img { width:280px; }
