--- a/css/modules/banner.css
+++ b/css/modules/banner.css
@@ -1,2 +1,2 @@
 .banner { margin-bottom:0; }
-.banner h1 { font-size:6.05em; line-height:1em; letter-spacing:-1px; margin-top:0.41em; }
+.banner h1 { font-size:6.6em; line-height:1em; letter-spacing:-1px; margin-top:0.28em; /* : ( */ position:relative; top:.14em }
