--- a/css/modules/edition.css
+++ b/css/modules/edition.css
@@ -1,3 +1,3 @@
-.edition cite { font-style:italic; font-size:1.2em; text-align:center; display:block; margin:.6em 0 1.3em; }
+.edition cite { font-style:italic; font-size:1.2em; text-align:center; display:block; margin:.6em 0 1.3em; position:relative; z-index:1; }
 .edition.secondary { margin-top:1.9em; }
 .edition.secondary cite { line-height:1.2em; margin:0; }
