--- a/css/global/typography.css
+++ b/css/global/typography.css
@@ -1,5 +1,5 @@
 @font-face { font-family:Prince Valiant; src:url('../../img/PrinceValiant.ttf'); } 
-body { font-family:'Hoefler Text', serif; font-size:62.5%; color:#555; background-color:#fffffc; }
+body { font-family:'Hoefler Text', serif; font-size:62.5%; color:#555; background-color:#fffffd; }
 a { text-decoration:none; }
 h1:hover a,
 h2:hover a,
