--- a/css/modules/postcard.css
+++ b/css/modules/postcard.css
@@ -2,6 +2,6 @@
 .postcard { margin-bottom:2em; }
 .postcard h2 { font-size:3.3em; letter-spacing:-1px; line-height:1.3em; margin:0.65em 0 1.3em; padding-top:0; }
 .postcard textarea,
-.postcard input { width:90%; font-size:1.4em; line-height:1.5em; border-width:0; color:#666; }
+.postcard input { width:90%; font-size:1.4em; line-height:1.5em; color:#666; background-color:inherit; border-width:0; }
 .postcard textarea { width:100%; height:16.5em; resize:vertical; }
 .postcard label { font-size:1.4em; line-height:1.5em; margin-top:1.3em; }
