--- a/css/global/typography.css
+++ b/css/global/typography.css
@@ -1,7 +1,4 @@
-body { font-family:'Hoefler Text', serif; font-size:62.5%; color:#555; background-color:#fffffd; }
+body { font-family:'Hoefler Text', serif; font-size:62.5%; background-color:rgb(242,231,233); }
 a { text-decoration:none; }
-h1:hover a,
-h2:hover a,
 a:hover { text-decoration:underline; cursor:pointer; }
-a:visited, a:hover, a:link { color:black; }
-em { color:#00a; }
+/*em { color:#00a; }*/
