--- a/css/modules/sidebar.css
+++ b/css/modules/sidebar.css
@@ -1,6 +1,6 @@
 .sidebar { margin:1em 0 1.2em; }
 .sidebar h3 { font-size:1.5em; line-height:1.7em; text-align:right; }
-.sidebar table { font-family:'Helvetica','Arial',sans-serif; font-size:1.3em; background-color:#eee; color:#555; border:solid #aaa 1px; }
+.sidebar table { font-family:'Helvetica','Arial',sans-serif; font-size:1.3em; background-color:#ccc; border:solid #aaa 1px; }
 .sidebar td { border:solid #aaa; border-width:1px 0 0 1px; }
 .six_units .sidebar td { width:190px; }
 .nine_units .sidebar td { width:290px; }
