--- a/css/modules/leader.css
+++ b/css/modules/leader.css
@@ -8,7 +8,7 @@
 .leader cite { line-height:1.75em; font-size:1.2em; }
 .leader ol,
 .leader ul,
-.leader p { font-size:1.4em; line-height:1.5em; margin-top:1.52em; text-align:justify; }
+.leader p { font-size:1.4em; line-height:1.5em; margin-top:1.52em; text-align:justify; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; }
 .leader.legible p { text-align:left; }
 .leader ol li { list-style:decimal inside; margin-left:.5em; text-align:left; }
 .leader hr { border:0; text-align:center; margin:0; height:0; }
