--- a/css/modules/sidebar.css
+++ b/css/modules/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar { margin:1.6em 0; }
-.sidebar h3 { font-size:1.5em; line-height:1.7em; text-align:right; }
+.sidebar h3 { font-size:1.5em; line-height:1.7em; text-align:right; margin-top:1.8em; }
 .sidebar table { font-family:'Helvetica','Arial',sans-serif; font-size:1.3em; background-color:#ccc; border:solid #aaa 1px; }
 .sidebar td { border:solid #aaa; border-width:1px 0 0 1px; }
 .six_units .sidebar td { width:190px; }
