--- a/css/modules/flag.css
+++ b/css/modules/flag.css
@@ -1,5 +1,6 @@
+@font-face { font-family:Fette Gotisch; src:url("/img/DSFetteGotisch.ttf"); }
 .flag { margin:3em auto 0; text-align:center; }
-.flag h3 { font-family:'FetteGotischW01-Regular'; font-size:12em; line-height:.6em; color:black; letter-spacing:-.1em;}
+.flag h3 { font-family:'Fette Gotisch'; font-size:12em; line-height:.6em; color:black; letter-spacing:-.1em;}
 .flag h3 .letter_i { letter-spacing:-.09em; }
 .flag h3 .letter_n { letter-spacing:-.07em; }
 .flag h3 .letter_c { letter-spacing:-.05em; }
