--- a/css/global/typography.css
+++ b/css/global/typography.css
@@ -1,3 +1,3 @@
-body { font-family:'Hoefler Text', 'Georgia', serif; font-size:62.5%; background-color:rgb(242,231,233); }
+html { font-family:'Hoefler Text', 'Georgia', serif; font-size:62.5%; background-color:rgb(242,231,233); }
 a { text-decoration:none; }
 a:hover { text-decoration:underline; cursor:pointer; }
