--- a/css/modules/leader.css
+++ b/css/modules/leader.css
@@ -1,6 +1,6 @@
 /* ToDo: Make .leader min-height not break the JS to add automatic spacing on short pieces. */
 .leader h1, 
-.leader h2 { font-size:3.3em; letter-spacing:-1px; line-height:1.3em; margin-top:0.65em; padding-top:0; }
+.leader h2 { font-family:"Hoefler Titling A"; font-size:3.3em; font-weight:700; line-height:1.3em; margin-top:0.65em; padding-top:0; }
 .leader.first.front { min-height:640px; }
 .leader.read,
 .leader .read,
